--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <div id="main" role="main">
 		<h1>Ouroborus Bite!</h1>
 		<a href="img/IMG_2966.JPG"><img style="width: 400px" src="img/IMG_2966.JPG" /></a>
+		<p>
+			<a href="https://github.com/gavinblair/Ouroboros-Bite">Fork me!</a>
+		</p>
     </div>
     <footer>
 
