--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        More info: h5bp.com/b/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Ouroborus Bite!</title>
+  <title>Elemeater</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -41,7 +41,7 @@
 
     </header>
     <div id="main" role="main">
-		<h1>Ouroborus Bite!</h1>
+		<h1>Elemeater</h1>
 		<a href="img/IMG_2966.JPG"><img style="width: 400px" src="img/IMG_2966.JPG" /></a>
 		<p>
 			<a href="https://github.com/gavinblair/Ouroboros-Bite">Fork me!</a>
