--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
     <div id="main" role="main">
 		<h1>Elemeater</h1>
-		<a href="img/IMG_2966.JPG"><img style="width: 400px" src="img/IMG_2966.JPG" /></a>
+		<div id="playground"></div>
 		<p>
 			<a href="https://github.com/gavinblair/Ouroboros-Bite">Fork me!</a>
 		</p>
@@ -62,6 +62,8 @@
 
   <!-- scripts concatenated and minified via ant build script-->
   <script defer src="js/plugins.js"></script>
+  <script defer src="js/constants.js"></script>
+  <script defer src="js/ring.js"></script>
   <script defer src="js/script.js"></script>
   <!-- end scripts-->
 
