something to look at for the live watchers

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <div id="main" role="main">
 		<h1>Elemeater</h1>
 		<div id="playground"></div>
+		<img src="img/doubles.png" />
+		<img src="img/singles.png" />
 		<p>
 			<a href="https://github.com/gavinblair/Elemeater">Fork me!</a>
 		</p>
