--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <header>
 
     </header>
-    <div id="main" role="main">
+   
 		<h1>Elemeater</h1>
+		 <p> A game produced during <a href="http://globalgamejam.org/">Global Game Jame 2012</a> at the <a href=http://unlondon.ca">Unlab</a> in London Ontario Canada </P>
+    <div id="main" role="main">
 		<div id="playground"></div>
 		<img src="img/doubles.png" />
 		<img src="img/singles.png" />
