Correct typo and add gjj project page link.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </header>
     <div id="main" role="main">
 		<h1>Elemeater</h1>
-		<p> A game produced during <a href="http://globalgamejam.org/">Global Game Jame 2012</a> at the <a href=http://unlondon.ca">Unlab</a> in London Ontario Canada </P>
-
+		<p> A game produced during <a href="http://globalgamejam.org/">Global Game Jam 2012</a> at the <a href=http://unlondon.ca">Unlab</a> in London Ontario Canada </P>
+		<p> <a href="http://globalgamejam.org/2012/elemeater">GJJ Project page</a> </p>
 		<div id="playground"></div>
 		<img src="img/doubles.png" />
 		<img src="img/singles.png" />
