--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <!-- scripts concatenated and minified via ant build script-->
   <script defer src="js/plugins.js"></script>
   <script defer src="js/constants.js"></script>
+  <script defer src="js/player.js"></script>
   <script defer src="js/ring.js"></script>
   <script defer src="js/script.js"></script>
   <!-- end scripts-->
