--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
 		<p> A game produced during <a href="http://globalgamejam.org/">Global Game Jam 2012</a> at the <a href=http://unlondon.ca">Unlab</a> in London Ontario Canada </P>
 		<p> <a href="http://globalgamejam.org/2012/elemeater">GJJ Project page</a> </p>
 		<div id="playground"></div>
+		<div id="instructions">
+			<p>
+				Water &gt; Rock<br />
+				Rock &gt; Fire<br />
+				Fire &gt; Water<br />
+			</p>
+		</div>
+		<br class="clear" />
 		<p>
 			<a href="https://github.com/gavinblair/Elemeater">Fork me!</a>
 		</p>
