--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<h1>Elemeater</h1>
 		<p> A game produced during <a href="http://globalgamejam.org/">Global Game Jam 2012</a> at the <a href=http://unlondon.ca">Unlab</a> in London Ontario Canada </P>
 		<p> <a href="http://globalgamejam.org/2012/elemeater">GJJ Project page</a> </p>
-		<div id="playground"></div>
+		<div id="playground"><div id="splash"></div></div>
 		<div id="instructions">
 			<p>
 				Water &gt; Rock<br />
