Second draft of docs, cleaned up layout

--- a/index.html
+++ b/index.html
@@ -47,16 +47,11 @@
 		<div id="playground"><div id="splash"></div></div>
 		<div id="instructions">
 			<p>
-			
-				Water &gt; Rock<br />
-				Rock &gt; Fire<br />
-				Fire &gt; Water<br />
-				The goal is to eliminate all the elemental<br />
-				tiles which causes the green Ouroboros snake<br />
-				to grow. If you can get the head to eat its<br />
-				own tail you will have defeated the Ouroboros snake!<br />
-
-				Click on a elemental snake tile to rotate it with the goal of matching  the open section with a matching open section of the same colour. Once a match is made the tiles will disappear and the Ouroboros will grow.
+				The goal is to eliminate all the elemental tiles which causes the green Ouroboros snake to grow. If you can get the head to eat its own tail you will have defeated the Ouroboros snake!<br />
+				<p>
+				Click on a elemental snake tile to rotate it with the goal of matching  the open section with a matching open section of the same colour.
+				<p>
+				Once a match is made the tiles will disappear and the Ouroboros will grow.
 				
 			</p>
 		</div>
