--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div id="main" role="main">
 		<h1>Elemeater</h1>
 		<p> A game produced during <a href="http://globalgamejam.org/">Global Game Jam 2012</a> at the <a href=http://unlondon.ca">Unlab</a> in London Ontario Canada </P>
-		<p> <a href="http://globalgamejam.org/2012/elemeater">GJJ Project page</a> </p>
+		<p> <a href="http://globalgamejam.org/2012/elemeater">GGJ Project page</a> </p>
 		<div id="playground"><div id="splash"></div></div>
 		<div id="instructions">
 			<p>
