Final edits of instructions.

--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
 		<div id="playground"><div id="splash"></div></div>
 		<div id="instructions">
 			<p>
-				The goal is to eliminate all the elemental tiles which causes the green Ouroboros snake to grow.
-				If you can get the head to eat its own tail you will have defeated the Ouroboros snake!<br />
+				The goal is to eliminate all the elemental snake tiles which causes the green Ouroboros snake to grow.
+				
 				<p>
-				Click on a elemental snake tile to rotate it with the goal of matching  the open section with
-				a matching open section of the same colour.
+				Click on a elemental snake tile to rotate it with the goal of matching the open side with
+				a matching open side of the same colour.
 				<p>
-				Once a match is made the tiles will disappear and the Ouroboros will grow.
+				Once a match is made the elemental snake tiles will disappear and the Ouroboros will grow. 
+				If you can get Ouroboros to eat its own tail you will have defeated the Ouroboros snake!
 				
 			</p>
 		</div>
